[package]
name = "webauthexp"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2021"

[dependencies]
actix-rt = "~2.4.0"
actix-service = "~2.0.0"
actix-session = "0.5.0-beta.7"
actix-web = "=4.0.0-beta.18"
actix-utils = "~3.0.0"
anyhow = "~1.0.40"
base64 = "~0.13.0"
env_logger = "~0.8.3"
jsonwebtoken = "~7.2.0"
rand = "~0.8.3"
reqwest = { version = "~0.11.2", features = ["json"] }
serde = "~1.0.125"
serde_derive = "~1.0.125"
serde_json = "~1.0.64"
sha2 = "~0.9.4"
structopt = "~0.3.21"
thiserror = "~1.0.24"
tokio = { version = "~1.5.0", features = ["fs", "macros", "rt-multi-thread"] }
toml = "~0.5.8"
url = "~2.2.1"

[dev-dependencies]
httpmock = "~0.5.8"
